--- a/coaching.css
+++ b/coaching.css
@@ -9,6 +9,32 @@ body{
 }
 
 /*header*/
+
+a{
+    text-decoration: none;
+    padding: 10px;
+    font-size: 20px;
+    text-transform: capitalize;
+    color:#000000;
+}
+
+.header1{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+h1{
+    text-transform: capitalize;
+    color: #00008b;
+}
+
+#close,#open{
+    display: none;
+    text-transform: uppercase
+}
+
 .header1{
     height: 400px;
     background-image: linear-gradient(rgba(32, 56, 55, 0.9),rgba(27, 45, 48, 0.9)),url('p5.jpg');
@@ -109,6 +135,26 @@ body{
 
 /*@mediaqueries*/
 @media(max-width:720px){
+
+    nav{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: absolute;
+        transition: top 2s;
+        right: 1px;
+        left: -2px;
+        top: -720px;
+        background-color: lightblue;
+        width: 100%;
+    }
+
+    #close,#open{
+    display: block;
+    cursor: pointer;
+    color: #00008b;
+    } 
+
 .img{
     height: 0px;
 }
